--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,15 @@
 .container {
-  padding: 20px;
+  display: flex;
+  justify-content: center;
 }
+
+mat-sidenav-container, mat-sidenav-content, mat-sidenav {
+    height: 100%;
+}
+mat-sidenav {
+    width: 250px;
+}
+main {
+    padding: 10px;
+}
+
