--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+<div>
+<mat-sidenav-container>
+<mat-sidenav #sidenav role="navigation">
+  <!--this is a place for us to add side-nav code-->
+</mat-sidenav>
+<mat-sidenav-content>
+  <!--in here all the content must reside. We will add a navigation header as well-->
+  <app-header></app-header>
+  <main>
+  </main>
+</mat-sidenav-content>
+</mat-sidenav-container>
 <div class="container">
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+</div>
 </div>
