--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,63 @@
-<p>home works!</p>
+<div class="container">
+  <form *ngIf="showForm" class="example-form" [formGroup]="personalForm" (ngSubmit)="onFormSubmit(personalForm.value)" >
+      <h2>Informazioni personali</h2>
+      <div class="button-row">
+
+		<mat-form-field class="example-full-width">
+		    <mat-label>Nome</mat-label>
+		    <input matInput  formControlName="name"
+		            [errorStateMatcher]="matcher">
+		    <mat-error>
+		      <span *ngIf="!personalForm.get('name').valid && personalForm.get('name').touched">Please enter your name</span>
+		    </mat-error>
+		</mat-form-field>
+
+		<mat-form-field class="example-full-width">
+		    <mat-label>Cognome</mat-label>
+		    <input matInput  formControlName="surname"
+		            [errorStateMatcher]="matcher">
+		    <mat-error>
+		      <span *ngIf="!personalForm.get('surname').valid && personalForm.get('surname').touched">Please enter your surname</span>
+		    </mat-error>
+		</mat-form-field>
+
+		<mat-form-field class="example-full-width">
+		    <mat-label>Soprannome</mat-label>
+		    <input matInput  formControlName="nickname"
+		            [errorStateMatcher]="matcher">
+		    <mat-error>
+		      <span *ngIf="!personalForm.get('nickname').valid && personalForm.get('nickname').touched">Please enter your nickname</span>
+		    </mat-error>
+		</mat-form-field>
+
+		<mat-form-field class="example-full-width">
+		    <mat-label>Livello</mat-label>
+		    <md-input-container>
+			    <input
+			        matInput
+			        type="number"
+			        formControlName="level"
+			        [errorStateMatcher]="matcher"
+			    />
+				</md-input-container>
+		    <mat-error>
+		      <span *ngIf="!personalForm.get('level').valid && personalForm.get('level').touched && personalForm.get('level')>0 && personalForm.get('level')<5 ">Please enter your level</span>
+		    </mat-error>
+		</mat-form-field>
+
+
+		<mat-form-field>
+		<mat-label>Posizione</mat-label>
+		  <mat-select formControlName="position" [errorStateMatcher]="matcher">
+		    <mat-option *ngFor="let pos of positions" [value]="pos">
+		      {{pos}}
+		    </mat-option>
+		  </mat-select>
+		</mat-form-field>
+
+
+          <button type="submit" [disabled]="!personalForm.valid" mat-fab color="primary"><mat-icon>save</mat-icon></button>
+      </div>
+  </form>
+  <div *ngIf="!showForm"> NOPE BRO </div>
+</div>
