--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <form class="example-form" [formGroup]="loginForm" (ngSubmit)="onFormSubmit(loginForm.value)">
-      <h2>Please login using your credentials</h2>
+      <h2>Loggati e competi!</h2>
       <mat-form-field class="example-full-width">
         <mat-label>Email</mat-label>
         <input matInput placeholder="Enter your email" formControlName="email"
@@ -17,12 +17,10 @@
           <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">Please enter your password</span>
         </mat-error>
       </mat-form-field>
-      <a href="javascript:void(0)" [disabled]="!loginForm.get('email').valid" (click)="onResetPassword(loginForm.value)">Forgot Password?</a>
+      <a href="javascript:void(0)" (click)="onResetPassword(loginForm.value)">Forgot Password?</a>
 
       <div class="button-row">
           <button type="submit" [disabled]="!loginForm.valid" mat-fab color="primary"><mat-icon>login</mat-icon></button>
       </div>
   </form>
-
-
 </div>
