--- a/src/app/creategame/creategame.component.html
+++ b/src/app/creategame/creategame.component.html
@@ -1,1 +1,39 @@
-<p>creategame works!</p>
+<div class="container">
+  <form *ngIf="showForm" class="example-form" [formGroup]="createGameForm" (ngSubmit)="onFormSubmit(createGameForm.value)" >
+      <h2>Crea nuova partita</h2>
+      <div >
+		<mat-form-field class="example-full-width">
+		    <mat-label>Campo</mat-label>
+		    <input matInput  formControlName="place"
+		            [errorStateMatcher]="matcher">
+		    <mat-error>
+		      <span *ngIf="!createGameForm.get('place').valid && createGameForm.get('place').touched">Il posto è richiesto</span>
+		    </mat-error>
+		</mat-form-field>
+	</div>
+      <div >
+		<mat-form-field>
+			 <mat-label>Data</mat-label>
+    		<input matInput type="datetime-local" formControlName="date"
+		            [errorStateMatcher]="matcher">
+		    <mat-error>
+		      <span *ngIf="!createGameForm.get('date').valid && createGameForm.get('date').touched">La data è richiesta</span>
+		    </mat-error>
+  		</mat-form-field>
+  	</div>
+      <div >
+		<mat-form-field>
+		<mat-label>Stato</mat-label>
+		  <mat-select formControlName="state" [errorStateMatcher]="matcher">
+		    <mat-option *ngFor="let state of states" [value]="state">
+		      {{state}}
+		    </mat-option>
+		  </mat-select>
+		</mat-form-field>
+		</div>
+      <div class="button-row">
+          <button type="submit" [disabled]="!createGameForm.valid" mat-fab color="primary"><mat-icon>create</mat-icon></button>
+      </div>
+  </form>
+  <div *ngIf="!showForm"> NOPE BRO </div>
+</div>
