--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -7,7 +7,8 @@
   <span class="heading-big-span"></span>
   <button  routerLink="/login" mat-icon-button class="big" aria-label="Login">
     <mat-icon>login</mat-icon>
-  </button><button mat-icon-button class="big" aria-label="Crea una nuova partita">
+  </button>
+  <button routerLink="/creategame" mat-icon-button class="big" aria-label="Crea una nuova partita">
     <mat-icon>create</mat-icon>
   </button>
   <button mat-icon-button class="big" aria-label="Lista delle partite">
