--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -1,1 +1,5 @@
-<p>gamelist works!</p>
+<mat-button-toggle-group name="filters" aria-label="Filters">
+  <mat-button-toggle value="mine">Mie</mat-button-toggle>
+  <mat-button-toggle value="open">Aperte</mat-button-toggle>
+  <mat-button-toggle value="closed">Chiuse</mat-button-toggle>
+</mat-button-toggle-group>
