--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -11,10 +11,10 @@
   <button routerLink="/creategame" mat-icon-button class="big" aria-label="Crea una nuova partita">
     <mat-icon>create</mat-icon>
   </button>
-  <button mat-icon-button class="big" aria-label="Lista delle partite">
+  <button routerLink="/gamelist" mat-icon-button class="big" aria-label="Lista delle partite">
     <mat-icon>sports_tennis</mat-icon>
   </button>
-  <button mat-icon-button class="big" aria-label="Pagina Personale">
+  <button  routerLink="/home" mat-icon-button class="big" aria-label="Pagina Personale">
     <mat-icon>home</mat-icon>
   </button>
 </mat-toolbar>
