another step into gamelist component

--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -2,7 +2,7 @@
 <mat-button-toggle-group name="filters" aria-label="Filters">
   <mat-button-toggle value="mine">Mie</mat-button-toggle>
   <mat-button-toggle value="open">Aperte</mat-button-toggle>
-  <mat-button-toggle value="closed">Chiuse</mat-button-toggle>
+  <mat-button-toggle value="all">All</mat-button-toggle>
 </mat-button-toggle-group>
 <mat-card *ngFor="let game of games">
   <mat-card-header>
