Equipo component added

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -5,9 +5,7 @@
   <span class="heading-small-span"></span>
   <span>Equipo Adriano</span>
   <span class="heading-big-span"></span>
-  <button  routerLink="/login" mat-icon-button class="big" aria-label="Login">
-    <mat-icon>login</mat-icon>
-  </button>
+ 
   <button routerLink="/creategame" mat-icon-button class="big" aria-label="Crea una nuova partita">
     <mat-icon>create</mat-icon>
   </button>
@@ -16,5 +14,11 @@
   </button>
   <button  routerLink="/home" mat-icon-button class="big" aria-label="Pagina Personale">
     <mat-icon>home</mat-icon>
+  </button>
+  <button  routerLink="/equipo" mat-icon-button class="big" aria-label="Equipo">
+    <mat-icon>people</mat-icon>
+  </button>
+  <button  routerLink="/login" mat-icon-button class="big" aria-label="Login">
+    <mat-icon>login</mat-icon>
   </button>
 </mat-toolbar>
