--- a/src/app/equipo/equipo.component.html
+++ b/src/app/equipo/equipo.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<table mat-table [dataSource]="equipo" class="mat-elevation-z8">
+<table mat-table [dataSource]="infoService.equipo | async" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
