--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -7,8 +7,8 @@
 <mat-card class="example-form" *ngFor="let game of gameStore.games | async">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>{{game.date.split("T")[0]}}             {{game.place}}</mat-card-title>
-    <mat-card-subtitle>{{game.date.split("T")[1]}}</mat-card-subtitle>
+    <mat-card-title>{{game.date}}            </mat-card-title>
+    <mat-card-subtitle>{{game.place}}</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image src="assets/images/field_{{game.state}}.png" width="4">
   <mat-card-content>
